--- a/dkdo.texi
+++ b/dkdo.texi
@@ -27,6 +27,24 @@ Foundation GNU Free Documentation Licence.
 @finalout
 @end iftex
 
+@macro dkcmd{key,command}
+@kindex \key\
+@findex \command\
+@item @kbd{\key\} @tie{}@tie{}@tie{}@tie{}(@code{\command\})
+@end macro
+
+@macro NOW
+@dfn{NOW}
+@end macro
+
+@macro LATER
+@dfn{LATER}
+@end macro
+
+@macro DONE
+@dfn{DONE}
+@end macro
+
 @titlepage
 @title Do List Mode 0.4
 @author David Keegan
@@ -36,41 +54,56 @@ Foundation GNU Free Documentation Licence.
 @end titlepage
 @contents
 
-
 @ifnottex
 @node Top
 @top Do List Mode
 This mode facilitates maintaining a freely editable task
-list in a single file by automating many frequent
-operations. It keeps urgent tasks near the top of the file
-and supports deferred and recurring tasks.
-
-It uses org mode's outlining, visibility cycling, and
-lists/checkboxes for structuring tasks, but in so far as it
-maintains the Do List in a separate document, it provides an
+list in a single file. It uses org mode's outlining,
+visibility cycling, and lists/checkboxes for structuring
+tasks, but in so far as it maintains the Do List in a
+separate document and allows for continuous re-ordering of
+tasks to reflect changing priorities, it provides an
 alternative to org mode's TODO items feature.
 @end ifnottex
 
 @menu
 * Introduction::
 * Structure::
-* Operations::
+* Editing::
 * Version Control::
 * Concept Index::
-
 @end menu
 
 @node Introduction
 @chapter Introduction
 @cindex Introduction
 
+@menu
+* Overview::
+* Getting Started::
+@end menu
+
+@node Overview
+@section Overview
+
+DkTbd:
+
+It keeps urgent tasks near the top of the file
+and supports deferred and recurring tasks.
+by automating frequent operations
+
+@node Getting Started
+@section Getting Started
+
+DkTbd:
+
 @node Structure
 @chapter Structure
 @cindex Structure
 
 A Do List is a single file using org-mode headlines for
-structure. It has three sections, @dfn{NOW}, @dfn{LATER},
-and @dfn{DONE}, in that order and each consisting of a
+structure. It has three sections, @NOW{}, @LATER{},
+and @DONE{}, in that order and each consisting of a
 top-level org-mode heading and its contents, which comprises
 a number of tasks.
 
@@ -83,7 +116,7 @@ significant to this mode), and other structural elements
 such as lists.
 
 For example, here is a minimal do list with a couple of
-tasks in section @dfn{NOW} and empty @dfn{LATER} and @dfn{DONE}
+tasks in section @NOW{} and empty @LATER{} and @DONE{}
 sections:
 
 @smallformat
@@ -102,19 +135,19 @@ sections:
 @end smallformat
 
 Urgent tasks and tasks currently being worked on live in
-section @dfn{NOW}. It is usually convenient to keep the most
+section @NOW{}. It is usually convenient to keep the most
 urgent tasks closer to the beginning of the section.
 
-Section @dfn{LATER} contains dated tasks, generally in
+Section @LATER{} contains dated tasks, generally in
 reverse date order with the latest on top. Tasks which need
 to be performed or reviewed on a perticular date remain in
 this section until they become due, when they are usually
-shifted to section @dfn{NOW} to be worked on (this shift can
+moved to section @NOW{} to be worked on (this move can
 be automatic). This section is also a useful home for tasks
 which are on hold pending action by others, and tasks which
 have been deferred for later consideration.
 
-Once completed, tasks are moved to the @dfn{DONE} section,
+Once completed, tasks are moved to the @DONE{} section,
 where all tasks are prefixed with a timestamp representing
 the completion date. This section is generally sorted in
 chronological order and is useful as a historical record.
@@ -124,11 +157,11 @@ collected and managed together and perhaps hidden from view
 util they are being worked on. The relationship between a
 subtask and its parent is not permanent and is broken at
 some point before the subtask is completed. To ensure every
-subtask is completed it is illegal to shift a task
-containing subtasks from section @dfn{NOW} to section
-@dfn{DONE}. Instead each subtask must be shifted
+subtask is completed it is illegal to move a task
+containing subtasks from section @NOW{} to section
+@DONE{}. Instead each subtask must be moved
 individually. A consequence of this is that subtasks do not
-exist in section @dfn{DONE}.
+exist in section @DONE{}.
 
 An alternative means of structuring a task or subtask is
 where the task consists of a number of components or steps,
@@ -138,22 +171,81 @@ means of an org-mode checkboxed list item in the task body
 for each component. Unlike subtasks, checkboxed items are
 tightly integrated into the task.
 
-@node Operations
-@chapter Operations
-@cindex Operations
+@node Editing
+@chapter Editing
+@cindex Editing
+
+@menu
+* Editing Overview::
+* Move to @DONE{}::
+* Move to @LATER{}::
+* Move to @NOW{}::
+* Refresh Buffer::
+* Start New Task::
+@end menu
+
+@node Editing Overview
+@section Overview
+
+Normal (org-mode) editing commands are not restricted in any
+way, and indeed are necessary for initial entry of tasks
+into the dolist. You are free to make any changes you wish
+to the file content at any time, including changes that
+break its structure as a do list. It is necessary to take
+reasonable care to avoid such changes as unexpected outcomes
+are likely.
+
+Do List mode provides a number of commands which automate
+operations on tasks. These commands do respect and preserve
+the structure of the file:
+
+@table @asis
+@dkcmd{C-c C-x d, dkdo-TaskDone}
+Move the current task to section @DONE{}.
+@xref{Move to @DONE{}, DONE}.
+
+@dkcmd{C-c C-x l, dkdo-TaskToLater}
+Move the current task to section @LATER{}.
+@xref{Move to @LATER{}, LATER}.
+
+@dkcmd{C-c C-x n, dkdo-TaskToNow}
+Move the current task to section @NOW{}.
+@xref{Move to @NOW{}, NOW}.
+
+@dkcmd{C-c C-x r, dkdo-Refresh}
+Refresh the buffer DkTbd: more.
+@xref{Refresh Buffer}.
+
+@dkcmd{C-c C-x s, dkdo-TaskStart}
+Start a new task or subtask after the current task subtask.
+@xref{Start New Task}.
+@end table
 
 When point is on a task header or on any non-subtask content, an
 operation applies to the whole task including the subtasks. When
 point is on a subtask, it applies to the subtask only. When a
-subtask is shifted it is detached from its parent and promoted to
+subtask is moved it is detached from its parent and promoted to
 a task (by adjusting its header).
 
 Checkboxed task components. The task header line can
 indicate the number or percentage of components currently
-completed, and the task may be automatically shifted to DONE
+completed, and the task may be automatically moved to DONE
 once all components have been checked (configurable).
 
+@node Move to @DONE{}
+@section Move to @DONE{}
 
+@node Move to @LATER{}
+@section Move to @LATER{}
+
+@node Move to @NOW{}
+@section Move to @NOW{}
+
+@node Refresh Buffer
+@section Refresh Buffer
+
+@node Start New Task
+@section Start New Task
 
 @node Version Control
 @chapter Version Control
