--- a/dkdo.texi
+++ b/dkdo.texi
@@ -27,22 +27,31 @@ Foundation GNU Free Documentation Licence.
 @finalout
 @end iftex
 
-@macro dkcmd{key,command}
+@macro dkcmditem{key, key2, command}
 @kindex \key\
+@kindex \key2\
 @findex \command\
-@item @kbd{\key\} @tie{}@tie{}@tie{}@tie{}(@code{\command\})
+@item @kbd{\key\}@tie{} (@kbd{\key2\}) (@code{\command\})
+@end macro
+
+@macro dkcmd{key, key2, command}
+@kbd{\key\}@tie{} (@kbd{\key2\}) (@code{\command\})
+@end macro
+
+@macro dktag{text}
+@samp{\text\}
 @end macro
 
 @macro NOW
-@dfn{NOW}
+@dktag{NOW}
 @end macro
 
 @macro LATER
-@dfn{LATER}
+@dktag{LATER}
 @end macro
 
 @macro DONE
-@dfn{DONE}
+@dktag{DONE}
 @end macro
 
 @titlepage
@@ -69,7 +78,7 @@ alternative to org mode's TODO items feature.
 @menu
 * Introduction::
 * Structure::
-* Editing::
+* Operations::
 * Version Control::
 * Concept Index::
 @end menu
@@ -95,25 +104,41 @@ by automating frequent operations
 @node Getting Started
 @section Getting Started
 
-DkTbd:
+To enable dkdo-mode, add this line to your emacs profile:
+
+@lisp
+(add-to-list 'auto-mode-alist '("\\.do$" . dkdo-mode))
+@end lisp
+
+Dkdo-mode mode binds a number of @kbd{C-c C-x <key>}
+sequences. To bind the corresponding (shorter) @kbd{C-c
+<key>} sequences in dkdo-mode, add the following line to
+your emacs profile (optional but recommended):
+
+@lisp
+(add-hook 'dkdo-mode-hook 'dkdo-SetCcKeys)
+@end lisp
+
+Dkdo-mode can be customised via customisation group ``dk'',
+subgroup ``dkdo''.
 
 @node Structure
 @chapter Structure
 @cindex Structure
 
 A Do List is a single file using org-mode headlines for
-structure. It has three sections, @NOW{}, @LATER{},
-and @DONE{}, in that order and each consisting of a
-top-level org-mode heading and its contents, which comprises
-a number of tasks.
+structure. It has three sections, @NOW{}, @LATER{}, and
+@DONE{}, in that order and each consisting of a top-level
+org-mode headline and its contents, which comprises a number
+of tasks.
 
 A task consists of an org-mode second level headline and its
 contents. A third-level headline within a task is a subtask.
-The task/subtask content starts immediately after the header
-prefix and includes the remainder of the header and any
-content, including any lower level sections (which are not
-significant to this mode), and other structural elements
-such as lists.
+The task/subtask content starts immediately after the
+headline prefix and includes the remainder of the headline
+and any content, including any lower level sections (which
+are not significant to this mode), and other structural
+elements such as lists.
 
 For example, here is a minimal do list with a couple of
 tasks in section @NOW{} and empty @LATER{} and @DONE{}
@@ -169,22 +194,27 @@ all of which must be completed before the task itself can be
 considered completed. This situation is best handled by
 means of an org-mode checkboxed list item in the task body
 for each component. Unlike subtasks, checkboxed items are
-tightly integrated into the task.
+tightly integrated into the task. The task headline line can
+indicate the number or percentage of components currently
+completed, and the task may be automatically moved to DONE
+once all components have been checked (configurable DkTbd).
 
-@node Editing
-@chapter Editing
-@cindex Editing
+@node Operations
+@chapter Operations
+@cindex Operations
 
 @menu
-* Editing Overview::
+* Operations Overview::
+* Start New Task::
 * Move to @DONE{}::
 * Move to @LATER{}::
 * Move to @NOW{}::
+* Entering Times::
 * Refresh Buffer::
-* Start New Task::
+* Refresh Timer::
 @end menu
 
-@node Editing Overview
+@node Operations Overview
 @section Overview
 
 Normal (org-mode) editing commands are not restricted in any
@@ -200,52 +230,166 @@ operations on tasks. These commands do respect and preserve
 the structure of the file:
 
 @table @asis
-@dkcmd{C-c C-x d, dkdo-TaskDone}
+@dkcmditem{C-c C-x d, C-c d, dkdo-TaskDone}
 Move the current task to section @DONE{}.
 @xref{Move to @DONE{}, DONE}.
 
-@dkcmd{C-c C-x l, dkdo-TaskToLater}
+@dkcmditem{C-c C-x l, C-c l, dkdo-TaskToLater}
 Move the current task to section @LATER{}.
 @xref{Move to @LATER{}, LATER}.
 
-@dkcmd{C-c C-x n, dkdo-TaskToNow}
+@dkcmditem{C-c C-x n, C-c n, dkdo-TaskToNow}
 Move the current task to section @NOW{}.
 @xref{Move to @NOW{}, NOW}.
 
-@dkcmd{C-c C-x r, dkdo-Refresh}
+@dkcmditem{C-c C-x r, C-c r, dkdo-BufferRefresh}
 Refresh the buffer DkTbd: more.
 @xref{Refresh Buffer}.
 
-@dkcmd{C-c C-x s, dkdo-TaskStart}
+@dkcmditem{C-c C-x s, C-c s, dkdo-TaskStart}
 Start a new task or subtask after the current task subtask.
 @xref{Start New Task}.
 @end table
 
-When point is on a task header or on any non-subtask content, an
-operation applies to the whole task including the subtasks. When
-point is on a subtask, it applies to the subtask only. When a
-subtask is moved it is detached from its parent and promoted to
-a task (by adjusting its header).
+Each move command applies to the @dfn{current} task, that is
+the task in whose headline or content point currently lies.
+When point is on a task headline or on any non-subtask
+content, an operation applies to the whole task including
+the subtasks. When point is on a subtask, it applies to the
+subtask only. When a subtask is subject to a move operation,
+it is detached from its parent and promoted to a task (by
+adjusting its headline).
 
-Checkboxed task components. The task header line can
-indicate the number or percentage of components currently
-completed, and the task may be automatically moved to DONE
-once all components have been checked (configurable).
+@node Start New Task
+@section Start New Task
+
+@dkcmd{C-c C-x s, C-c s, dkdo-TaskStart}
+
+Inserts the headline prefix for a new task or subtask
+immediately after the current task/subtask, and positions
+point for editing the remainder of the headline and
+contents, if any.
 
 @node Move to @DONE{}
 @section Move to @DONE{}
 
+@dkcmd{C-c C-x d, C-c d, dkdo-TaskDone}
+
+Moves the current task/subtask to section @DONE{},
+indicating that it has been completed. It is prefixed in
+section @DONE{} with the current time as a timestamp
+representing the completion date. Should a task need to be
+re-visited after completion, it can be moved to section
+@NOW{} or section @LATER{}, which causes the completion
+timestamp to be removed.
+
+To change the completion timestamp, move the task from
+@DONE{} to @DONE{}. This operation prompts for a replacement
+timestamp. @xref{Entering Times}.
+
 @node Move to @LATER{}
 @section Move to @LATER{}
+
+@dkcmd{C-c C-x l, C-c l, dkdo-TaskToLater}
+
+Moves the current task/subtask to section @LATER{} and
+prompts for a due date/time which is prefixed to the task
+headline. @xref{Entering Times}.
+
+This is the standard way to handle a task which needs to be
+placed on hold pending action by others, or which needs to
+be deferred for later consideration for some other reason.
+
+Also the standard way to enter a task with a due date is to
+insert it into section @NOW{} with @dkcmd{C-c C-x s, C-c s,
+dkdo-TaskStart}, edit it as required but omit a due date,
+and then move it to section @LATER{}, which will prompt for
+the due date.
 
 @node Move to @NOW{}
 @section Move to @NOW{}
 
+@dkcmd{C-c C-x n, C-c n, dkdo-TaskToNow}
+
+Moves the current task/subtask to section @NOW{}. A task is
+moved from section @LATER{} to section @NOW{} when it is to
+be worked on, either because its due date has arrived, or
+otherwise. The task due date prefix remains in place after
+the move. While this move can be invoked manually, it is
+usually triggered automatically by @dkcmd{C-c C-x r, C-c r,
+dkdo-BufferRefresh} for tasks in section @LATER{} which have
+become due.
+
+A completed task is moved from section @LATER{} to section
+@NOW{} in the event that it needs to be revisited and worked
+on some more. In this case the task's completion date prefix
+is removed.
+
+@node Entering Times
+@section Entering Times
+
+Some move operations prompt for a date/time value, which is
+inserted as a prefix to the task headline. On moving to
+@LATER{}, it is the due date/time, usually in the future. On
+moving from @DONE{} to @DONE{} it is the completion date,
+usually in the past.
+
+Time input is as for @code{org-read-date} but with some
+differences:
+
+@enumerate
+@item
+Only ISO dates (YYYY-MM-DD) are supported. DkTbd?
+
+@item
+Valid units for a relative time are h (hour), d (day), w
+(week), m (month), y (year).
+
+@item
+The leading sign can be ommitted from a relative time,
+provided the unit is present. In that case the shift is
+presumed to be forward.
+
+@item
+A relative time is evaluated with respect to the current
+time when moving a task from @NOW{} to @LATER{} or from
+@DONE{} to @LATER{}. However when moving from @LATER{}
+to @LATER or from @DONE{} to @LATER{} it is evaluated with
+respect to the current task timestamp. DkTbd?
+@end enumerate
+
 @node Refresh Buffer
 @section Refresh Buffer
 
-@node Start New Task
-@section Start New Task
+@dkcmd{C-c C-x r, C-c r, dkdo-BufferRefresh}
+
+The primary function of this operation, and the only
+function when it is invoked by the Refresh Timer, is to
+scan section @LATER{} and move any tasks that have become
+due (ie whose due date has arrived or been passed) to
+section @NOW{}.
+
+When invoked manually it also sorts tasks in each section,
+and folds tasks so only the task level headlines are
+visible.
+
+@node Refresh Timer
+@section Refresh Timer
+
+The Refresh Timer is started on entry to dkdo-mode if
+variable @code{dkdo-RefreshSeconds} has a value greater than
+zero. While running, the timer calls @code{dkdo-BufferRefresh}
+periodically at the specified interval to promote any due
+tasks from section @LATER{} to section @NOW{}.
+
+A change to @code{dkdo-RefreshSeconds} has no effect on an
+existing dkdo-mode buffer until
+@code{dkdo-RefreshTimerStartIf} is run while the buffer is
+current to stop any existing timer and start a new one if
+appropriate.
+
+You can stop the timer at any time with
+@code{dkdo-RefreshTimerStop}.
 
 @node Version Control
 @chapter Version Control
