--- a/dkdo.texi
+++ b/dkdo.texi
@@ -76,14 +76,6 @@ Foundation GNU Free Documentation Licence.
 @ifnottex
 @node Top
 @top Do List Mode
-Do List Mode facilitates maintaining a freely editable task
-list in a single file. It is based on org-mode, and org-mode
-features like outlining, visibility cycling, and
-lists/checkboxes are used for structuring tasks. However in
-so far as it maintains the Do List in a separate document
-and allows for continuous re-ordering of tasks to reflect
-changing priorities, it provides an alternative to org
-mode's TODO items feature.
 @end ifnottex
 
 @menu
@@ -100,16 +92,23 @@ mode's TODO items feature.
 @menu
 * Overview::
 * Getting Started::
+* Known Issues::
 @end menu
 
 @node Overview
 @section Overview
 
-DkTbd:
+Do List Mode facilitates maintaining a freely editable task
+list in a single file. It is based on org-mode, and org-mode
+features like outlining, visibility cycling, and
+lists/checkboxes are used for structuring tasks. However in
+so far as it maintains the Do List in a separate document
+and allows for continuous re-ordering of tasks to reflect
+changing priorities, it provides an alternative to org
+mode's TODO items feature.
 
-It keeps urgent tasks near the top of the file
-and supports deferred and recurring tasks.
-by automating frequent operations
+It keeps urgent tasks near the top of the file to maximise
+visibility and supports deferred and recurring tasks.
 
 @node Getting Started
 @section Getting Started
@@ -132,11 +131,20 @@ your emacs profile (optional but recommended):
 Dkdo-mode can be customised via customisation group ``dk'',
 subgroup ``dkdo''.
 
+@node Known Issues
+@section Known Issues
+
+All timestamps in the do list must be in ISO format
+(YYYY-MM-DD). Other formats are not supported.
+
 @node Data
 @chapter Data
 
 @menu
 * File Structure::
+* Sections and Tasks::
+* Subtasks::
+* Checkboxes::
 * Task Details::
 * Time Interval::
 @end menu
@@ -155,16 +163,17 @@ headline prefix in the file, or at the end of file.
 
 @cindex task
 @cindex content, task
-A @dfn{task} consists of an org-mode second level headline and its
-content. It begins at the beginning of the second level
-headline prefix, and ends just before the beginning of the
-next second or top level headline prefix in the file, or at
-the end of file. The headline is the first line of the task,
-and subsequent lines, if any, are the @dfn{content}.
+A @dfn{task} consists of an org-mode second level headline
+and its content. It begins at the beginning of the second
+level headline prefix, and ends just before the beginning of
+the next second or top level headline prefix in the file, or
+at the end of file. The headline is the first line of the
+task, and subsequent lines, if any, are the @dfn{content}.
+@xref{Task Details}.
 
 @cindex subtask
 A subtask is similar to a task except that it begins with a
-third level org-mode headline.
+third level org-mode headline. @xref{Task Details}.
 
 For example, here is a minimal do list with a couple of
 tasks in section @NOW{} and empty @LATER{} and @DONE{}
@@ -173,39 +182,56 @@ sections:
 @smallformat
 @verbatim
 * NOW:
-** This is a Task with two subtasks:
-- Do this thoroughly.
-*** Subtask1.
-*** Subtask2
+** This is a Task.
+This one is really urgent.
 
-** A second Task, with checkboxes [1/2]:
-- [X] Item 1.
-- [ ] Item 2.
+** This is a second Task:
+- Needs to be done quickly.
 
 * LATER:
+** 2013-09-29 Kk: This task is due 29 September.
+** 2013-10-04 Kk: This task is due 4 October.
 
 * DONE:
+** 2013-09-28 08:17 Dk: This task was completed 28 September.
+
 @end verbatim
 @end smallformat
+
+@node Sections and Tasks
+@section Sections and Tasks
 
 Urgent tasks and tasks currently being worked on live in
 section @NOW{}. It is usually convenient to keep the most
 urgent tasks closer to the beginning of the section.
 
-Section @LATER{} contains dated tasks, generally in
-reverse date order with the latest on top. Tasks which need
-to be performed or reviewed on a particular date remain in
-this section until they become due, when they are usually
-moved to section @NOW{} to be worked on (this move can
-be automatic). This section is also a useful home for tasks
-which are on hold pending action by others, and tasks which
-have been deferred for later consideration.
+Section @LATER{} contains tasks which have a due date, and
+is generally maintained in reverse date order with the most
+recent on top. Tasks which need to be performed or reviewed
+by a particular date remain in this section until they
+become actionable, when they are usually moved to section
+@NOW{} to be worked on (this move can be automatic). This
+section is also a useful home for tasks which are on hold
+pending action by others, and tasks which have been deferred
+for later consideration.
+
+@anchor{Actionable}
+@cindex actionable
+To allow for preparation, a task becomes @dfn{actionable} a
+certain amount of time before its due date. This preparation
+time is customisable via variable
+@code{dkdo-ActionableNoticeHours}, and can be adjusted to
+consist of working hours only via customisable variables
+@code{dkdo-ActionableSkipAfterMidnight} and
+@code{dkdo-ActionableSkipBeforeMidnight}.
 
 Once completed, tasks are moved to the @DONE{} section,
 where all tasks are prefixed with a timestamp representing
 the completion date. This section is generally sorted in
 chronological order and is useful as a historical record.
 
+@node Subtasks
+@section Subtasks
 @cindex subtask
 The intent of a subtask is to allow related items to be
 collected and managed together and perhaps hidden from view
@@ -216,10 +242,27 @@ subtask is completed individually, it is illegal to move a
 task containing subtasks from section @NOW{} to section
 @DONE{}. Instead each subtask must be moved individually. A
 consequence of this is that subtasks do not exist in section
-@DONE{}.
+@DONE{}. @xref{Task Details}.
 
-DkTbd: Example of task with subtasks.
+For example, here is a task with subtasks:
 
+@smallformat
+@verbatim
+* NOW:
+** This is a Task with two subtasks:
+Arbitrary content of main task.
+*** Subtask1.
+Content of Subtask1.
+More content of Subtask1.
+*** Subtask2
+- Content as a list item.
+- Another list item.
+
+@end verbatim
+@end smallformat
+
+@node Checkboxes
+@section Checkboxes
 @cindex checkbox
 @cindex list
 An alternative means of structuring a task or subtask is
@@ -230,15 +273,32 @@ means of an org-mode checkboxed list item in the task body
 for each component. Unlike subtasks, checkboxed items are
 tightly integrated into the task. The task headline line can
 indicate the number or percentage of components currently
-completed, and the task may be automatically moved to DONE
-once all components have been checked (configurable DkTbd).
+completed thanks to org-mode.
+@inforef{Checkboxes, Org Mode Checkboxes, org}.
 
-DkTbd: Example of checkboxes.
+The checkboxed task or subtask may be automatically moved to
+DONE once all components have been checked (customisable via
+@code{dkdo-AutoFinishCheckedTasks}.
+
+@smallformat
+@verbatim
+* NOW:
+
+** This is a Task with a checkboxed list [0/2]:
+- [ ] Item1.
+      Content of Subtask1.
+- [ ] Item with subitems [0/3]:
+  - [ ] Subitem1.
+  - [ ] Subitem2.
+  - [ ] Subitem3.
+
+@end verbatim
+@end smallformat
 
 @node Task Details
 @section Task Details
 
-@cindex task
+@cindex task, details
 @cindex task, definition
 A task is a structured second level org-mode headline,
 followed by optional free-form content on succeeding lines.
@@ -365,19 +425,19 @@ the structure of the file:
 @c Force xrefs to following line.
 @table @asis
 @dkcmditem{C-c C-x d, C-c d, dkdo-TaskDone}
-Move the current task to section @DONE{}. @w{                  }
+Move the current task to section @DONE{}. @w{                     }
 @xref{Move to DONE}.
 
 @dkcmditem{C-c C-x l, C-c l, dkdo-TaskToLater}
-Move the current task to section @LATER{}. @w{                 }
+Move the current task to section @LATER{}. @w{                    }
 @xref{Move to LATER}.
 
 @dkcmditem{C-c C-x n, C-c n, dkdo-TaskToNow}
-Move the current task to section @NOW{}. @w{                   }
+Move the current task to section @NOW{}. @w{                      }
 @xref{Move to NOW}.
 
 @dkcmditem{C-c C-x r, C-c r, dkdo-BufferRefresh}
-Refresh the buffer DkTbd: more. @w{                            }
+Refresh the buffer. @w{                                           }
 @xref{Refresh Buffer}.
 
 @dkcmditem{C-c C-x s, C-c s, dkdo-TaskStart}
@@ -390,9 +450,10 @@ Each move command applies to the @dfn{current} task or
 subtask, that is the task or subtask in whose headline or
 content point currently lies.
 
+@cindex promote, subtask to task
 When point is in a subtask's headline or content, the
 subtask is moved, becomes detached from its parent task and
-is promoted to a task in its own right (by adjusting its
+is @dfn{promoted} to a task in its own right (by adjusting its
 headline prefix).
 
 On the other hand, when point is in a task's headline or
@@ -469,12 +530,13 @@ the due date.
 
 Moves the current task/subtask to section @NOW{}. A task is
 moved from section @LATER{} to section @NOW{} when it is to
-be worked on, either because its due date has arrived, or
-otherwise. The task due date prefix remains in place after
-the move. While this move can be invoked manually, it is
-usually triggered automatically by @dkcmd{C-c C-x r, C-c r,
-dkdo-BufferRefresh} for tasks in section @LATER{} which have
-become due.
+be worked on, either because its due date is imminent, or
+for some other reason. The task due date prefix remains in
+place after the move. While this move can be invoked
+manually, it is usually triggered automatically by
+@dkcmd{C-c C-x r, C-c r, dkdo-BufferRefresh} for tasks in
+section @LATER{} which have become actionable.
+@xref{Actionable}.
 
 A completed task is moved from section @LATER{} to section
 @NOW{} in the event that it needs to be revisited and worked
@@ -497,7 +559,7 @@ differences:
 
 @enumerate
 @item
-Only ISO dates (YYYY-MM-DD) are supported. DkTbd?
+Only ISO dates (YYYY-MM-DD) are supported.
 
 @item
 A relative time may be input. @xref{Time Interval}.
@@ -526,9 +588,7 @@ respect to the current task timestamp. DkTbd?
 The primary function of this operation, and the only
 function when it is invoked by the @ref{Refresh Timer}, is
 to scan section @LATER{} and move any tasks that have become
-due to section @NOW{}. A task is due when the current system
-time is greater than or equal to its due date. DkTbd:
-anticipation of due date.
+actionable to section @NOW{}. @xref{Actionable}. 
 
 When invoked manually it also sorts tasks in each section,
 and folds tasks so only the task level headlines are
@@ -541,9 +601,10 @@ visible.
 @cindex timer, refresh
 The Refresh Timer is started on entry to dkdo-mode if
 variable @code{dkdo-RefreshSeconds} has a value greater than
-zero. While running, the timer calls @code{dkdo-BufferRefresh}
-periodically at the specified interval to promote any due
-tasks from section @LATER{} to section @NOW{}.
+zero. While running, the timer calls
+@code{dkdo-BufferRefresh} periodically at the specified
+interval to move any actionable tasks from section @LATER{}
+to section @NOW{}. @xref{Actionable}.
 
 A change to @code{dkdo-RefreshSeconds} has no effect on an
 existing dkdo-mode buffer until
